# sonnet-v2

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  scene.schema.json  vulkan-impl.md
apps/: CMakeLists.txt
apps/demo/: CMakeLists.txt  EditorUI.cpp  EditorUI.h  FlyCamera.h  IBL.h  PostProcess.cpp  PostProcess.h  RenderGraph.cpp  RenderGraph.h  RenderTargets.cpp  RenderTargets.h  ShaderRegistry.cpp  ShaderRegistry.h  ShadowMaps.cpp  ShadowMaps.h  main.cpp  main_vk.cpp
apps/demo/assets/: scene.json
apps/demo/assets/models/: AnimatedCube.glb
apps/demo/assets/scripts/: rotate.lua
apps/demo/assets/shaders/: bloom_blur.frag  bloom_bright.frag  deferred_lighting.frag  emissive.frag  emissive.vert  fxaa.frag  fxaa.vert  gbuffer.frag  gbuffer.vert  gbuffer_emissive.frag  gbuffer_skinned.vert  lit.frag  lit.vert  outline.frag  outline_mask.frag  outline_mask_skinned.vert  picking.frag  picking.vert  point_shadow.frag  point_shadow.vert  prepass.frag  prepass.vert  shadow.vert  sky.frag  sky.vert  ssao.frag  ssao.vert  ssao_blur.frag  ssao_show.frag  ssr.frag  tonemap.frag  tonemap.vert
apps/demo/assets/shaders/ibl/: brdf_lut.frag  brdf_lut.vert  capture.vert  equirect_to_cube.frag  irradiance.frag  prefilter.frag
cmake/: dependencies.cmake  functions.cmake  options.cmake
docs/: architecture.md  build.md  demo.md  ibl.md  loaders.md  opengl-backend.md  physics.md  post-process.md  primitives.md  render-graph.md  renderer.md  scene-files.md  ui.md  (+5 more)
modules/: CMakeLists.txt
modules/api/: CMakeLists.txt
modules/api/include/sonnet/api/input/: IInput.h  IInputSink.h  Key.h  KeyEvent.h  MouseButton.h  MouseEvent.h
modules/api/include/sonnet/api/render/: BackendCreateOptions.h  CPUMesh.h  FrameContext.h  GpuMesh.h  IGpuBuffer.h  IRenderTarget.h  IRenderer.h  IRendererBackend.h  IShader.h  ITexture.h  IVertexInputState.h  Light.h  Material.h  RenderItem.h  RenderState.h  VertexAttribute.h  VertexLayout.h
modules/api/include/sonnet/api/window/: IWindow.h
modules/api/tests/: CPUMeshTests.cpp  KeyMapTests.cpp  LightTests.cpp  MaterialTests.cpp  MockBackends.h  MockBackendsTests.cpp  RenderStateTests.cpp  TextureDescTests.cpp  VertexAttributeTests.cpp  VertexLayoutTests.cpp
modules/core/: CMakeLists.txt
modules/core/include/sonnet/core/: Handle.h  Hash.h  Macros.h  ReadonlyBuffer.h  RendererTraits.h  Store.h  Types.h
modules/core/tests/: StoreTests.cpp
modules/input/: CMakeLists.txt
modules/input/include/sonnet/input/: InputHash.h  InputSystem.h
modules/input/src/: InputSystem.cpp
modules/input/tests/: InputSystemTests.cpp
modules/loaders/: CMakeLists.txt
modules/loaders/include/sonnet/loaders/: ModelLoader.h  ShaderLoader.h  TextureLoader.h
modules/loaders/src/: ModelLoader.cpp  ShaderLoader.cpp  TextureLoader.cpp
modules/loaders/tests/: BoundsTests.cpp  ModelLoaderTests.cpp  ShaderLoaderTests.cpp  TextureLoaderTests.cpp
modules/loaders/tests/fixtures/: ATTRIBUTION.md
modules/physics/: CMakeLists.txt
modules/physics/include/sonnet/physics/: PhysicsBodyDef.h  PhysicsSystem.h
modules/physics/src/: PhysicsSystem.cpp
modules/physics/tests/: PhysicsSystemTests.cpp
modules/primitives/: CMakeLists.txt
modules/primitives/include/sonnet/primitives/: MeshPrimitives.h
modules/primitives/src/: MeshPrimitives.cpp
modules/primitives/tests/: MeshPrimitivesTests.cpp
modules/renderer/: CMakeLists.txt
modules/renderer/frontend/: CMakeLists.txt
modules/renderer/frontend/include/sonnet/renderer/frontend/: BackendFactory.h  Renderer.h  UboLayouts.h
modules/renderer/frontend/src/: BackendFactory.cpp  Renderer.cpp
modules/renderer/frontend/tests/: CMakeLists.txt  RendererTests.cpp  UboLayoutsTests.cpp
modules/renderer/opengl/: CMakeLists.txt
modules/renderer/opengl/include/sonnet/renderer/opengl/: GlGpuBuffer.h  GlGpuMeshFactory.h  GlRenderTarget.h  GlRenderTargetFactory.h  GlRendererBackend.h  GlShader.h  GlShaderCompiler.h  GlTexture2D.h  GlTextureFactory.h  GlVertexInputState.h
modules/renderer/opengl/src/: GlRenderTarget.cpp  GlRendererBackend.cpp  GlShader.cpp  GlShaderCompiler.cpp  GlTexture2D.cpp  GlUtils.h
modules/renderer/vulkan/: CMakeLists.txt
modules/renderer/vulkan/include/sonnet/renderer/vulkan/: VkGpuBuffer.h  VkGpuMeshFactory.h  VkRenderTarget.h  VkRenderTargetFactory.h  VkRendererBackend.h  VkShader.h  VkShaderCompiler.h  VkTexture2D.h  VkTextureFactory.h  VkVertexInputState.h
modules/renderer/vulkan/src/: VkBindState.h  VkCommandContext.cpp  VkCommandContext.h  VkDescriptorManager.cpp  VkDescriptorManager.h  VkDevice.cpp  VkDevice.h  VkFormatMap.cpp  VkFormatMap.h  VkGpuBuffer.cpp  VkInstance.cpp  VkInstance.h  VkPipelineCache.cpp  VkPipelineCache.h  VkRenderTarget.cpp  VkRenderTargetFactory.cpp  VkRendererBackend.cpp  VkSamplerCache.cpp  VkSamplerCache.h  VkShader.cpp  VkShaderCompiler.cpp  VkStubs.h  VkSwapchain.cpp  VkSwapchain.h  VkTexture2D.cpp  VkTextureFactory.cpp  VkUniformRing.cpp  VkUniformRing.h  VkUtils.cpp  VkUtils.h  VkVertexInputState.cpp
modules/scene/: CMakeLists.txt
modules/scene/include/sonnet/scene/: SceneLoader.h
modules/scene/src/: SceneLoader.cpp
modules/scene/tests/: SceneLoaderTests.cpp
modules/scripting/: CMakeLists.txt
modules/scripting/include/sonnet/scripting/: IScriptRuntime.h  LuaScriptRuntime.h
modules/scripting/src/: LuaScriptRuntime.cpp
modules/scripting/tests/: LuaScriptRuntimeTests.cpp
modules/ui/: CMakeLists.txt
modules/ui/include/sonnet/ui/: ImGuiLayer.h
modules/ui/src/: ImGuiLayer.cpp
modules/window/: CMakeLists.txt
modules/window/include/sonnet/window/: GLFWInputAdapter.h  GLFWWindow.h
modules/window/src/: GLFWInputAdapter.cpp  GLFWWindow.cpp
modules/window/tests/: GLFWInputAdapterTests.cpp
modules/world/: CMakeLists.txt
modules/world/include/sonnet/world/: AnimationPlayer.h  CameraComponent.h  GameObject.h  Scene.h  SkinComponent.h  Transform.h
modules/world/src/: AnimationPlayer.cpp  Scene.cpp  Transform.cpp
modules/world/tests/: AnimationPlayerTests.cpp  CameraTests.cpp  SceneTests.cpp  TransformTests.cpp
